@@ -22,7 +22,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>November 21, 2004</p>
+<p>December 26, 2004</p>
 </center>
 
 <hr size=2 noshade>
@@ -524,6 +524,11 @@ New Breed Software</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
+      <td><code>swahili</code></td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
       <td><code>swedish</code></td>
       <td><code>svenska</code></td>
       <td>&nbsp;</td>
@@ -983,6 +988,11 @@ New Breed Software</p>
     <td><code>sv_SE</code></td>
     <td>Svenska</td>
     <td>Swedish</td>
+  </tr>
+  <tr>
+    <td><code>sw_TZ</code></td>
+    <td>&nbsp;</td>
+    <td>Swahili</td>
   </tr>
   <tr>
     <td><code>ta_IN</code> (*)</td>
