@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2004.10.24
-.TH TUXPAINT 1 "24 Oct 2004" "0.9.15" "Tux Paint"
+.\" tuxpaint.1 - 2004.12.26
+.TH TUXPAINT 1 "26 Dec 2004" "0.9.15" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -370,6 +370,9 @@ slovenian | slovensko
 spanish | espanol
 .TP 2
 -
+swahili
+.TP 2
+-
 swedish | svenska
 .TP 2
 -
@@ -492,14 +495,18 @@ lots of people, including, but not limited to:
 
 Daniel Andersson,
 Ben Armstrong,
+Martin Benjamin,
 Denis Bodor,
 Herman Bruyninckx,
 Laurentiu Buzdugan,
+Albert Cahalan,
 Pere Pujal Carabantes,
 Jacques Chion,
 Urska Colner,
 Ricardo Cruz,
+Laurent Dhima,
 Kevin Donnelly,
+Alberto Escudero-Pascual,
 Doruk Fisek,
 Dovix,
 Korvigellou An Drouizig (Philippe),
@@ -542,6 +549,8 @@ Primoz Peterlin,
 Le Quang Phan,
 Milan Plzik,
 John Popplewell,
+Leandro Regueiro,
+Ilir Rugova,
 Geert Stams,
 Peter Sterba,
 Tarmo Toikkanen,
